# meteoroid

./: CMakeLists.txt  README.md  adc_reader.c  max31856.c  max31856.h  pico_main.c
